# uvdbot

./: .gitignore  README.md  bot_init.py  pyproject.toml  req.txt  start_polling.py  start_webhook.py
handlers/: __init__.py  callbacks.py  commands.py  youtube.py
keyboards/: __init__.py  keyboard.py  stickers.py
modules/: __init__.py  database.py  fsworker.py  yt_loader.py
