[tool.poetry]
name = "yvdb2"
version = "0.1.0"
description = ""
authors = ["Anton Butkov <ant.butkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.1"
aiogram = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
